--- a/index.html
+++ b/index.html
@@ -181,6 +181,30 @@
   </div>
 </template>
 
+<script>
+  'use strict'
+
+  var fireballSize = 22;
+  var wizardSpeed = 3;
+  var wizardWidth = 70;
+
+  function getFireballSpeed(left) {
+    if (left) return 5;
+    return 2;
+  }
+
+  function getWizardHeight(wizardWidth) {
+    return 1.337 * wizardWidth;
+  }
+
+  function getWizardX(width) {
+    return width / 2;
+  }
+
+  function getWizardY(height) {
+    return height * 2 / 3;
+  }
+</script>
 <script src="js/game.js"></script>
 
 </body>
